# blocktest-ros-plugins

./: .gitignore  .mailmap  CMakeLists.txt  README.md  package.xml
ROS1/: CMakeLists.txt  README.md  package.xml
ROS1/src/: actionTopicRead.cpp  actionTopicRead.h  actionTopicWrite.cpp  actionTopicWrite.h  ros1ActionDepotStart.cpp  ros1ActionDepotStart.h  rosActionDepotStart.cpp  rosActionDepotStart.h  syntax.h  workspace.code-workspace
ROS1/testsRos1/test-ros1-simple/: README.md  test.xml  write.xml
ROS1/testsRos1/test-ros1-simple/script/: runroscore.sh
ROS1/xmltemplate/ros/: ros1topicread.xml  ros1topicwrite.xml
ROS2/: CMakeLists.txt  README.md  package.xml
ROS2/src/: actionTopicRead.cpp  actionTopicRead.h  actionTopicRobometry.cpp  actionTopicRobometry.h  actionTopicWrite.cpp  actionTopicWrite.h  rosActionDepotStart.cpp  rosActionDepotStart.h  syntax.h
ROS2/tests/laas/: read-jointstate-check.xml  read-jointstate.xml  robometry-jointstate.xml  robometry.xml  simple001.xml  simple002.xml  write-joint-position.xml
ROS2/tests/test-ros2-gazebo/: test.xml  writegeometry.xml
ROS2/tests/test-ros2-simple/: README.md  failreceive.xml  fast.xml  nop.xml  read-float64multiarray.xml  read-jointstate.xml  read-string-fast.xml  read-string.xml  read-twist.xml  read.xml  robometry-jointstate.xml  robometry.xml  simple001.xml  test.json  write-float64multiarray.xml  write-jointstate.xml  write-string-fast.xml  write-string.xml  write-twist.xml  write.xml
ROS2/tests/test-ros2-turtle/: README.md  test.xml  writegeometry.xml
ROS2/xmltemplate/ros2/: parameters.xml  rostopicread.xml  rostopicrobotometry.xml
src/: actionTopicRead.cpp  actionTopicRead.h  actionTopicWrite.cpp  actionTopicWrite.h  rosActionDepotStart.cpp  rosActionDepotStart.h  syntax.h
tests/test-ros-gazebo/: README.md  writegeometry.xml
tests/test-ros-simple/: README.md  read.xml  test.xml  verysimple.xml  write.xml  writegeometry.xml
tests/test-ros-turtle/: test.xml
xmltemplate/ros/: rostopicread.xml  rostopicwrite.xml
